UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/ftr_SIP_ElementRulesConfig__c.object-meta.xml
<CustomObject>
    <label>ftr_SIP_ElementRulesConfig</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ftr_SIP_ElementRulesConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>