UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/fields/CCS__c.field-meta.xml
<CustomField>
    <fullName>CCS__c</fullName>
    <label>CCS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>