UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/fields/DID_Number__c.field-meta.xml
<CustomField>
    <fullName>DID_Number__c</fullName>
    <label>DID_Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>