UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/fields/LD_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>LD_Overage_Rate__c</fullName>
    <label>LD_Overage_Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>