UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/fields/LongDistance_BOT__c.field-meta.xml
<CustomField>
    <fullName>LongDistance_BOT__c</fullName>
    <label>LongDistance BOT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>