UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_SIP_ElementRulesConfig__c/fields/Router_Model__c.field-meta.xml
<CustomField>
    <fullName>Router_Model__c</fullName>
    <label>Router_Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>